SCJ-138: Fix homepage scrollbar

--- a/app/ClientSrc/sass/global.scss
+++ b/app/ClientSrc/sass/global.scss
@@ -190,6 +190,7 @@ div.invalid-field-message {
             padding: 0;
             overflow: hidden;
             display: flex;
+            gap: 2px;
             flex-direction: column;
             align-items: flex-start;
             margin: 5px 0 0 0;
@@ -201,7 +202,6 @@ div.invalid-field-message {
 
             li {
                 float: left;
-                margin: 2px;
                 a {
                     display: block;
                     text-align: center;
